...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/StatsName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Užduotys"
                    android:layout_weight="3"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <Button
...
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/categoriesStats2"
                android:layout_width="match_parent"
                android:layout_height="540dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textCategories2"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="4dp"
                        android:text="Užduočių sąrašas"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="427dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
...
