...
                            android:text="Ilgiausiai naudojamos"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/mostUsedButton"
                            android:layout_width="0dp"
                            android:layout_height="32dp"
                            android:layout_marginLeft="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_button_background"
                            android:text="Daugiau"
                            android:textAllCaps="false"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
...
