<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/SettingsName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:layout_marginTop="24dp"
                android:text="Daugiau"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/essentialName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:layout_marginTop="24dp"
                android:text="Esminiai dalykai"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SettingsName"  />

            <Button
                android:id="@+id/yellowButton"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/round_button_background"
                android:text="Naudojimo patarimai"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/essentialName" />

            <TextView
                android:id="@+id/otherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:layout_marginTop="24dp"
                android:text="Kiti"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yellowButton"  />

            <Button
                android:id="@+id/yellowButton2"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/round_button_background"
                android:text="Pagalba"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otherName" />

            <Button
                android:id="@+id/yellowButton3"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/round_button_background"
                android:text="Problemų sprendimas"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yellowButton2" />

            <Button
                android:id="@+id/yellowButton5"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/black_button_background"
                android:text="Pakviesti draugą"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yellowButton3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="27dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="27dp" />

</androidx.constraintlayout.widget.ConstraintLayout>